<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/video_call"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VideoCallActivity">

    <FrameLayout
        android:id="@+id/videoContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black">

        <!-- Dynamic video layout container -->
        <LinearLayout
            android:id="@+id/videoLayoutContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" />

    </FrameLayout>

    <LinearLayout
        android:id="@+id/buttonLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="48dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/btnDisconnect"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginVertical="8dp"
            android:background="@drawable/bg_circle_button"
            android:contentDescription="@string/button_disconnect"
            android:src="@drawable/ic_close"
            tools:ignore="ImageContrastCheck" />

        <ImageButton
            android:id="@+id/btnToggleAudio"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginVertical="8dp"
            android:background="@drawable/bg_circle_button"
            android:contentDescription="@string/button_audio"
            android:src="@drawable/ic_audio_on"
            tools:ignore="ImageContrastCheck" />

        <ImageButton
            android:id="@+id/btnFlipCamera"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginVertical="8dp"
            android:background="@drawable/bg_circle_button"
            android:contentDescription="@string/button_flip_camera"
            android:src="@drawable/ic_flip_camera"
            tools:ignore="ImageContrastCheck" />

        <ImageButton
            android:id="@+id/btnScreenShare"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginVertical="8dp"
            android:background="@drawable/bg_circle_button"
            android:contentDescription="@string/button_screen_share"
            android:src="@drawable/ic_screen_share"
            tools:ignore="ImageContrastCheck" />

        <ImageButton
            android:id="@+id/btnInviteAgent"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginVertical="8dp"
            android:background="@drawable/bg_circle_button"
            android:contentDescription="@string/button_invite_agent"
            android:src="@drawable/ic_plus"
            tools:ignore="ImageContrastCheck" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/chatForm"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/bg_input"
        android:focusableInTouchMode="true"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingHorizontal="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent">

        <EditText
            android:id="@+id/chatEditText"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:autofillHints=""
            android:background="@android:color/transparent"
            android:hint="@string/send_message"
            android:inputType="text"
            android:maxLines="1"
            android:paddingVertical="4dp"
            android:paddingStart="8dp"
            android:paddingEnd="0dp"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/darker_gray"
            android:textSize="16sp"
            tools:ignore="VisualLintTextFieldSize" />

        <ImageButton
            android:id="@+id/chatSendButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/button_send"
            android:src="@drawable/ic_send" />

    </LinearLayout>

    <!-- Chat overlay -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/chatRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="16dp"
        android:background="@android:color/transparent"
        android:clipToPadding="false"
        android:overScrollMode="never"
        app:layout_constraintBottom_toTopOf="@id/chatForm"
        app:layout_constraintStart_toEndOf="@id/buttonLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>